# doit-agent

./: .gitignore  README.md  doit  ollama_activate_cmd.txt  pyproject.toml
docs/: ASSIGNMENT_3_AGENTS.md  report_part1.tex
docs/acdl/: ACDL_INSTRUCTIONS.md  part10_multi_tasking.acdl  part1_single_command.acdl  part2_dangerous_commands.acdl  part3_model_flexibility.acdl  part4_multi_turn.acdl  part5_clarifications.acdl  part6_richer_interactions.acdl  part7_memory.acdl  part8_user_awareness.acdl  part9_output_awareness.acdl
doit_agent/: __init__.py  cli.py  history.py  llm.py  safety.py  shell.py  types.py
tests/: test_cli.py  test_history.py  test_llm.py  test_safety.py  test_shell.py
